<resources>
    <string name="app_name">MyDay</string>
    <string name="MyDay">Мой день</string>
    <string name="Add_task">Добавить задачу</string>
    <string name="Title">Заголовок</string>
    <string name="Category">Категория</string>
    <string name="When">Когда</string>
    <string name="Description">Комментарий</string>
    <string name="Add_description">Добавьте текст</string>
    <string name="Add_title">Добавьте заголовок</string>
    <string name="Date">Дата</string>
    <string name="Time">Время</string>
    <string name="Save">Сохранить</string>
    <string name="Settings">Настройки</string>
    <string name="Choose_Theme">Выбор темы</string>
    <string name="Example">Изучаю Kotlin</string>
    <string name="Example_Time">12:25pm</string>
    <string name="NothingThere">Здесь пока пусто</string>
    <string name="Task">Задача</string>
    <string name="SaveEdit">Сохранить редактирование</string>
    <string name="Title_task">Заголовок:</string>
    <string name="ErrorTitle">Обязательное поле</string>
    <string name="NOtification">Уведомление</string>
    <string name="Go_back">Нажмите кнопку назад для выхода</string>
    <string name="Required_field">"Обязательное поле"</string>
</resources>