<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/TaskHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/add_task_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/TaskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/TaskHeader"
            app:layout_constraintTop_toTopOf="@id/TaskHeader"
            app:layout_constraintEnd_toEndOf="@id/TaskHeader"
            android:text="@string/Task"
            android:fontFamily="@font/inter_bold"
            android:textSize="32sp"
            android:textColor="@color/mainTextColor"
            android:layout_marginTop="45dp"
            />

        <ImageButton
            android:id="@+id/CloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/exit"
            tools:ignore="SpeakableTextPresentCheck"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_task"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="45dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/margin_task2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="45dp"
            />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/margin_task"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="180dp"
            android:text="@string/Title_task"
            android:fontFamily="@font/inter_semibold"
            android:maxLength="17"
            />

        <EditText
            android:id="@+id/TitleTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/Title"
            app:layout_constraintTop_toTopOf="@id/Title"
            app:layout_constraintBottom_toBottomOf="@id/Title"
            app:layout_constraintEnd_toStartOf="@id/CategoryTask"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="5dp"
            android:text="@string/Title"
            android:inputType="text|textCapSentences"
            android:fontFamily="@font/inter"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxLength="20"
            />

        <ImageView
            android:id="@+id/CategoryTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/margin_task"
            app:layout_constraintTop_toTopOf="@id/Title"
            app:layout_constraintBottom_toBottomOf="@id/Title"
            app:layout_constraintEnd_toStartOf="@id/margin_task2"
            app:layout_constraintHorizontal_bias="1"
            app:srcCompat="@drawable/default_category"
            />

        <TextView
            android:id="@+id/WhenTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/margin_task"
            app:layout_constraintTop_toBottomOf="@id/Title"
            android:layout_marginTop="30dp"
            android:text="@string/When"
            android:fontFamily="@font/inter_semibold"
            />

        <ImageView
            android:id="@+id/TimeInputBoxTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/margin_task"
            app:layout_constraintTop_toBottomOf="@id/WhenTask"
            app:srcCompat="@drawable/calendar_time_input_box"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:id="@+id/TimeTask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/TimeInputBoxTask"
            app:layout_constraintStart_toStartOf="@id/TimeInputBoxTask"
            app:layout_constraintBottom_toBottomOf="@id/TimeInputBoxTask"
            app:layout_constraintEnd_toStartOf="@id/clockBtnn"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:minHeight="48dp"
            android:background="@android:color/transparent"
            android:hint="@string/Time"
            android:text=""
            />

        <ImageButton
            android:id="@+id/clockBtnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="@id/TimeInputBoxTask"
            app:layout_constraintTop_toTopOf="@id/TimeInputBoxTask"
            app:layout_constraintBottom_toBottomOf="@id/TimeInputBoxTask"
            app:layout_constraintEnd_toEndOf="@id/TimeInputBoxTask"
            app:layout_constraintHorizontal_bias="1"
            app:srcCompat="@drawable/clock_icon"
            />

        <TextView
            android:id="@+id/DescriptionTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/TimeInputBoxTask"
            app:layout_constraintStart_toStartOf="@id/margin_task"
            android:text="@string/Description"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginTop="30dp"
            />

        <ImageView
            android:id="@+id/DescriptionInputBoxTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/DescriptionTask"
            app:layout_constraintStart_toStartOf="@id/margin_task"
            app:srcCompat="@drawable/description_input_box"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/DescriptionText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/DescriptionInputBoxTask"
            app:layout_constraintTop_toTopOf="@id/DescriptionInputBoxTask"
            app:layout_constraintEnd_toEndOf="@id/DescriptionInputBoxTask"
            app:layout_constraintBottom_toBottomOf="@id/DescriptionInputBoxTask"
            android:fontFamily="@font/inter"
            android:hint="@string/NothingThere"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:background="@android:color/transparent"
            android:text=""
            android:inputType="text|textCapSentences|textMultiLine"
            android:maxLength="170"
            android:maxLines="6"
            />

        <ImageButton
            android:id="@+id/SaveEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@+id/DescriptionInputBoxTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/button_save"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintVertical_bias="1"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/SaveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveEdit"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/mainTextColor"
            app:layout_constraintStart_toStartOf="@id/SaveEditButton"
            app:layout_constraintTop_toTopOf="@id/SaveEditButton"
            app:layout_constraintEnd_toEndOf="@id/SaveEditButton"
            app:layout_constraintBottom_toBottomOf="@id/SaveEditButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>