<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddTaskActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_task_background"
        android:adjustViewBounds="true"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_secondActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="45dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_secondActivity2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="45dp"
        />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Title"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="@id/margin_secondActivity"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/TitleInputBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/margin_secondActivity"
        app:layout_constraintTop_toTopOf="@id/Title"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/input_box"
        />

    <EditText
        android:id="@+id/getTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter"
        android:hint="@string/Add_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@id/TitleInputBox"
        app:layout_constraintTop_toTopOf="@id/TitleInputBox" />

    <TextView
        android:id="@+id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/Category"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="@id/margin_secondActivity"
        app:layout_constraintTop_toBottomOf="@id/TitleInputBox"
        android:layout_marginTop="40dp"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="default_category, calendar_category, chill_category"
        app:layout_constraintBottom_toBottomOf="@id/Category"
        app:layout_constraintEnd_toEndOf="@id/margin_secondActivity2"
        app:layout_constraintStart_toEndOf="@id/Category"
        app:layout_constraintTop_toTopOf="@id/Category"
        />

    <ImageButton
        android:id="@+id/default_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/default_category"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/calendar_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/default_category"
        app:layout_constraintTop_toTopOf="@id/default_category"
        app:srcCompat="@drawable/calendar_category"
        />


    <ImageButton
        android:id="@+id/chill_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/calendar_category"
        app:layout_constraintTop_toTopOf="@id/calendar_category"
        app:srcCompat="@drawable/chill_category"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/When"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toEndOf="@id/margin_secondActivity"
        //Продолжи отсюда

        />


</androidx.constraintlayout.widget.ConstraintLayout>

